Add gradle wrapper and kotlin example